test/fail/too_large_dec.min
program 
    number x := 2147483648 $$ 2^31
start
end
